--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,7 @@
 @import '~antd/dist/antd.css';
+body{
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
 .App {
   text-align: center;
 }
