--- a/src/pages/Parking/index.css
+++ b/src/pages/Parking/index.css
@@ -1,3 +1,18 @@
 .parking-page{
     height:100%
 }
+.am-search {
+    border-bottom: 1px solid #ddd;
+}
+.sub-title {
+    color: #888;
+    font-size: 14px;
+    padding: 30px 0 18px 0;
+}
+.am-button{
+    margin-top: 1%;
+    background-color: deepskyblue !important;
+}
+.imgBox {
+    margin:10%;
+}
