--- a/src/pages/Parking/index.css
+++ b/src/pages/Parking/index.css
@@ -32,11 +32,26 @@
 table{
     width: 90%;
     margin: 0 auto;
-    border: 1px solid #f0f0f0;
+    border: 1px solid #f0f0f0!important;
 }
 tr{
-    border-bottom: 1px solid #f0f0f0;
+    border-bottom: 1px solid #f0f0f0!important;
     text-align: left;
     height: 30px;
     line-height: 30px;
+}
+.confirmButton{
+    margin-top: 5%;
+    background-image: radial-gradient(darkgrey,#e0e0e0);
+    height: 40px;
+    line-height: 40px;
+    box-sizing: border-box;
+    border: none;
+    width: 300px;
+    border-radius: 5px;
+    font-size: 16px;
+}
+.payButton{
+    width:250px;
+    margin:5% auto;
 }
