--- a/src/pages/Settings/index.css
+++ b/src/pages/Settings/index.css
@@ -1,6 +1,3 @@
-.am-list-item .am-list-line .am-list-content {
-    display: flex;
-}
-.calendar-list .right {
-    float: right;
+.listGroup.item{
+    background: transparent;
 }
