--- a/src/pages/Settings/index.css
+++ b/src/pages/Settings/index.css
@@ -1,3 +1,18 @@
-.listGroup.item{
-    background: transparent;
+.settingButton{
+    background-color: white!important;
+}
+.modal-dialog{
+    margin:0!important;
+}
+.modal-content{
+    height: 100%;
+}
+.modal-90w{
+    width: 100%;
+    height:100%;
+}
+.list-group-item{
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 18px;
+    height:70px;
 }
