--- a/src/pages/Settings/index.css
+++ b/src/pages/Settings/index.css
@@ -34,3 +34,47 @@
 .search-button{
     margin-top: 20px;
 }
+.contactContainer{
+    width: 100%;
+    height: 50%;
+    margin-top: 35%;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-between;
+}
+.contactInner{
+    width: 100%;
+    height: 45%;
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+}
+.contactPhone{
+    text-align: center;
+    font-size: 80px;
+    color: #2070b2;
+}
+.contactPhoneText{
+    font-size: 20px;
+    font-weight: 500;
+    color: #2070b2;
+    display:flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+}
+.contactInner span{
+    margin-right: 10px;
+}
+.contactEmail{
+    text-align: center;
+    font-size: 80px;
+    color: darkred;
+}
+.contactEmailText{
+    font-size: 20px;
+    font-weight: 500;
+    color: darkred;
+    display:flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+}
